--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HW11</title>
+    <title>HW12</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -18,6 +18,13 @@
     </div>
 
     <ul class="gallery"></ul>
+
+    <div class="load-more">
+      <button type="button" class="loadmore-btn hidden">Load more</button>
+    </div>
+    <div>
+      <div class="loading-more"><span class="loader hidden"></span></div>
+    </div>
 
     <script src="./main.js" type="module"></script>
     <script src="./js/pixabay-api.js" type="module"></script>
